# scaling-django

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
nginx/: nginx.conf
products/: models.py  serializers.py  urls.py  views.py
products/management/commands/: category_seed.py  my  product  product_seed.py
products/migrations/: 0001_initial.py  0002_auto_20210628_0448.py  0003_alter_product_category.py  0004_alter_product_options.py
